--- a/css/style.css
+++ b/css/style.css
@@ -244,6 +244,11 @@ padding: 0 0 0 4px;
 outline: 0;
 margin: 10px 0 0 8px;
 }
+select{
+padding: 0 0 0 4px;
+outline: 0;
+margin-left:5px;
+}
 
 input[type=radio]{
 font: 80% helvetica,arial,clean,sans-serif;
@@ -556,4 +561,38 @@ table .span10 {
   margin-left: 0;
 }
 
-
+/*for form*/
+.controls_form{
+    font-size:10px;
+}
+/*
+.radio,
+.checkbox {
+      padding-left: 18px;
+}
+.radio input[type="radio"],
+.checkbox input[type="checkbox"] {
+      float: left;
+        margin-left: -18px;
+}
+.controls > .radio:first-child,
+.controls > .checkbox:first-child {
+      padding-top: 5px;
+}
+.radio.inline,
+.checkbox.inline {
+    display: inline-block;
+    padding-top: 5px;
+    margin-bottom: 0;
+    vertical-align: middle;
+}
+.radio.inline + .radio.inline,
+.checkbox.inline + .checkbox.inline {
+      margin-left: 10px;
+}
+*/
+.error_tips {
+    color:red;
+    display: none;
+    font-size:10px;
+}
