--- a/css/tv/filter.css
+++ b/css/tv/filter.css
@@ -1,6 +1,6 @@
-﻿body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,form,fieldset,input,button,select,option,textarea,p,blockquote,th,td{
+﻿/*body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,form,fieldset,input,button,select,option,textarea,p,blockquote,th,td{
 padding:0;margin:0;font:12px/20px arial,helvetica,verdana,tahoma,sans-serif;}
-
+*/
 .yk-con{padding:20px 10px;}
 
 .break{font-style:normal;color:#909090;margin:0 4px;}
@@ -110,7 +110,7 @@ _filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(src="http://static.yo
 
 
 /* 绛涢€夊櫒 */
-.yk-filter{margin-bottom:20px;}
+.yk-filter{margin-bottom:0px;}
 .yk-filter .yk-filter-panel .item{zoom:1;overflow:hidden;position:relative;height:30px;padding:0 0 0 47px;margin-bottom:4px;border-bottom:1px solid #ddd;}
 .yk-filter .yk-filter-panel .item label,
 .yk-filter .yk-filter-panel .item a,
